[package]
name = "graph-challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
rayon = "1.10.0"
num-traits = "0.2.19"
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "graph_bench"
harness = false
