[package]
name = "graph-challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
dary_heap = "0.3.7"
nohash-hasher = "0.2.0"
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "graph_bench"
harness = false

